[Win][MiniBrowser] wchar_t strings shouldn't be treated as BSTR https://bugs.webkit.org/show_bug.cgi?id=193271

Reviewed by Brent Fulgham.

BSTR is a special data structure created by SysAllocString, not a
wchar_t null-terminated string.

* DumpRenderTree/win/TestRunnerWin.cpp:
(TestRunner::setDatabaseQuota): Use L"" instead of "" for _bstr_t.
* MiniBrowser/win/MiniBrowserWebHost.cpp:
(MiniBrowserWebHost::didFinishLoadForFrame): Use _bstr_t to create
BSTR from wide string literals.

Canonical link: https://commits.webkit.org/207799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239812 268f45cc-cd09-0410-ab3c-d52691b4dbfc